--- a/platformio.ini
+++ b/platformio.ini
@@ -10,9 +10,34 @@
 
 [env:ttgo-t1]
 platform = espressif32
-board = ttgo-t1
+;board = ttgo-t1
+board = esp-wrover-kit
+board_build.partitions = min_spiffs.csv
+board_upload.flash_size = 4MB
+board_upload.maximum_size = 4194304
 framework = arduino
 lib_ldf_mode = deep
 monitor_speed = 115200
-lib_deps = 	
+upload_speed = 921600
+build_flags = '-DCORE_DEBUG_LEVEL=5'
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+lib_deps = 
 	vshymanskyy/TinyGSM@^0.11.1
+	vshymanskyy/StreamDebugger@^1.0.1
+
+[env:esp32doit-devkit-v1_4MB]
+platform = espressif32
+board = esp32doit-devkit-v1
+board_build.partitions = min_spiffs.csv
+board_upload.flash_size = 4MB
+board_upload.maximum_size = 4194304
+framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+build_flags = '-DCORE_DEBUG_LEVEL=5'
+	-DBOARD_HAS_PSRAM
+	-mfix-esp32-psram-cache-issue
+lib_deps = 
+	vshymanskyy/TinyGSM@^0.11.1
+	vshymanskyy/StreamDebugger@^1.0.1
